# SEKURO_TUGAS_1_Samantha_PROGRAMMING

./: .gitignore  gitignore
src/oop_soal_1/: mobil.cpp
src/ros_soal_1/ws_tugas1/src/tugas_ros2/: CMakeLists.txt  package.xml
src/ros_soal_1/ws_tugas1/src/tugas_ros2/src/: camera.cpp  detect_objects.cpp
src/soal_CMAKE/: CMakeLists.txt  command.txt
src/soal_CMAKE/include/: robotair.hpp
src/stl_soal/: robotPenjagaGudang.cpp
