<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tugas_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="samantha@todo.todo">samantha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- ini  dependency (yg from from)-->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- batas dependency -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
